force-app/main/default/objects/Reservation__c/fields/Abandoning_Time__c.field-meta.xml
<CustomField>
    <fullName>Abandoning_Time__c</fullName>
    <label>Abandoning Time</label>
    <type>Time</type>
</CustomField>