force-app/main/default/objects/Reservation__c/fields/Table_No__c.field-meta.xml
<CustomField>
    <fullName>Table_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Table No</label>
    <referenceTo>Table__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>