force-app/main/default/objects/Reservation__c/validationRules/Max_Occupancy.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Occupancy</fullName>
    <active>true</active>
    <description>To throw error if users enters no. of customers more than the table occupancy</description>
    <errorConditionFormula>Number_of_Guests__c &gt;  Table_No__r.Max_Occupancy__c</errorConditionFormula>
    <errorMessage>The number of guests exceeds the maximum occupancy for the selected table. Please select a larger table or reduce the number of guests.</errorMessage>
</ValidationRule>