force-app/main/default/objects/Reservation__c/validationRules/Past_date_and_time.validationRule-meta.xml
<ValidationRule>
    <fullName>Past_date_and_time</fullName>
    <active>true</active>
    <description>Prevent User to select past date and time</description>
    <errorConditionFormula>Booking_Time__c &lt; TIMEVALUE(NOW())</errorConditionFormula>
    <errorMessage>Reservations cannot be made for past times on the current day. Please select a future time.</errorMessage>
</ValidationRule>