force-app/main/default/objects/Reservation__c/validationRules/Table_Booking.validationRule-meta.xml
<ValidationRule>
    <fullName>Table_Booking</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() &amp;&amp; ISPICKVAL( Table_No__r.Status__c , &quot;Available&quot;) = False</errorConditionFormula>
    <errorMessage>This table is already booked. Please choose another table.</errorMessage>
</ValidationRule>