force-app/main/default/objects/Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Phone__c</columns>
    <columns>Table_No__c</columns>
    <columns>Booking_Date__c</columns>
    <columns>Booking_Time__c</columns>
    <columns>Abandoning_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>